# stellarium

plugins/ExtraCalendar/: CMakeLists.txt
plugins/ExtraCalendar/src/: CMakeLists.txt  ExtraCalendar.cpp  ExtraCalendar.hpp
plugins/ExtraCalendar/src/chinese/: lunisolar.cpp  lunisolar.hpp
po/stellarium/: zh_CN.po
src/: translations.h
